*Fix github actions

--- a/.github/workflows/docker-build-custom.yml
+++ b/.github/workflows/docker-build-custom.yml
@@ -14,10 +14,10 @@ on:
         options: [ master, develop ]
 jobs:
   call-docker-build:
-    uses: CruGlobal/.github/.github/workflows/docker-build.yml@master
+    uses: CruGlobal/.github/.github/workflows/docker-build.yml@main
     with:
       base_tag: ${{ inputs.base_tag }}
       tags: ${{ inputs.tags }}
     secrets: 
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
