--- a/.github/workflows/pr-merge-release.yml
+++ b/.github/workflows/pr-merge-release.yml
@@ -10,39 +10,41 @@ permissions:
 jobs:
   call-get-label:
     name: Label
-    uses: CruGlobal/.github/.github/workflows/get-pr-release-label.yml@master
+    uses: CruGlobal/.github/.github/workflows/get-pr-release-label.yml@main
   call-e2e-tests:
     name: Test
     needs: [call-get-label]
     # Only run if the PR closed by merging and we have a label
     if: ${{ github.event.pull_request.merged && needs.call-get-label.outputs.valid == 'true' }}
-    uses: CruGlobal/.github/.github/workflows/cypress-e2e-tests.yml@master
+    uses: CruGlobal/.github/.github/workflows/cypress-e2e-tests.yml@main
   call-bump-version:
     name: Version
     # Only run if tests pass 
     needs: [ call-get-label, call-e2e-tests ]
-    uses: CruGlobal/.github/.github/workflows/bump-version.yml@master
+    uses: CruGlobal/.github/.github/workflows/bump-version.yml@main
     with:
       ref: ${{ github.ref }}
       type: ${{ needs.call-get-label.outputs.label }}
   call-create-release:
     name: Release
-    uses: CruGlobal/.github/.github/workflows/create-release.yml@master
+    uses: CruGlobal/.github/.github/workflows/create-release.yml@main
     needs: [call-bump-version]
     with:
       tag: v${{ needs.call-bump-version.outputs.new_version }}
   call-docker-build:
-    uses: CruGlobal/.github/.github/workflows/docker-build.yml@master
+    uses: CruGlobal/.github/.github/workflows/docker-build.yml@main
     needs: [call-bump-version]
     secrets:
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     with:
       tags: master,develop,${{ needs.call-bump-version.outputs.new_version }}
   call-dispatch-runtime-update:
-    uses: CruGlobal/.github/.github/workflows/dispatch-update.yml@master
+    uses: CruGlobal/.github/.github/workflows/dispatch-update.yml@main
     needs: [ call-docker-build, call-bump-version, call-get-label ]
     with:
       type: ${{ needs.call-get-label.outputs.label }}
       version: ${{ needs.call-bump-version.outputs.new_version }}
       app_id: ${{ vars.GS_DEV_APP_ID }}
+    secrets:
+      app_secret: ${{ secrets.GS_DEV_APP_PK }}
