--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "author": "Johnny Hausman",
   "license": "MIT",
   "dependencies": {
-    "@digiserve/ab-utils": "^1.8.4",
+    "@digiserve/ab-utils": "github:CruGlobal/ab-utils#21000dbbf824879837e46efc4df598f3be539899",
     "@sentry/node": "^7.10.0",
     "@sentry/tracing": "^7.10.0",
-    "cote": "^1.0.0",
     "lodash": "^4.17.20",
     "semver": "^7.7.2",
     "uuid": "^8.3.2"
