--- a/package.json
+++ b/package.json
@@ -1,41 +1,47 @@
 {
-  "name": "log_manager",
-  "version": "1.1.9",
-  "description": "(AppBuilder) A log manager for various AB operations",
-  "main": "app.js",
-  "author": "Johnny Hausman",
-  "license": "MIT",
-  "dependencies": {
-    "@digiserve/ab-utils": "^1.9.1",
-    "@sentry/node": "^7.10.0",
-    "@sentry/tracing": "^7.10.0",
-    "cote": "^1.0.0",
-    "lodash": "^4.17.20",
-    "semver": "^7.7.2",
-    "uuid": "^8.3.2"
-  },
-  "scripts": {
-    "test": "run-p lint custom-tests",
-    "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "custom-tests": "make test",
-    "dev": "node_modules/.bin/nodemon --inspect=0.0.0.0:9229 app.js",
-    "devBuild": "run-script-os",
-    "devInstall": "run-script-os",
-    "devBuild:win32": "docker run -it --mount type=bind,source=%cd%,target=/app -w /app node npm install",
-    "devInstall:win32": "docker run -it --mount type=bind,source=%cd%,target=/app -w /app node bash",
-    "devBuild:darwin:linux": "docker run -it --mount type=bind,source=\"$(pwd)\",target=/app -w /app node npm install",
-    "devInstall:darwin:linux": "docker run -it --mount type=bind,source=\"$(pwd)\",target=/app -w /app node bash"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.2.5",
-    "mocha": "^8.1.2",
-    "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "run-script-os": "^1.1.1"
-  }
+   "name": "log_manager",
+   "version": "1.1.9",
+   "description": "(AppBuilder) A log manager for various AB operations",
+   "main": "app.js",
+   "author": "Johnny Hausman",
+   "license": "MIT",
+   "dependencies": {
+      "@digiserve/ab-utils": "github:CruGlobal/ab-utils#1.10.2",
+      "@sentry/node": "^7.10.0",
+      "@sentry/tracing": "^7.10.0",
+      "cote": "^1.2.0",
+      "lodash": "^4.17.21",
+      "semver": "^7.7.3",
+      "uuid": "^8.3.2"
+   },
+   "scripts": {
+      "test": "run-p lint custom-tests",
+      "lint": "eslint . --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
+      "custom-tests": "make test",
+      "dev": "node_modules/.bin/nodemon --inspect=0.0.0.0:9229 app.js",
+      "devBuild": "run-script-os",
+      "devInstall": "run-script-os",
+      "devBuild:win32": "docker run -it --mount type=bind,source=%cd%,target=/app -w /app node npm install",
+      "devInstall:win32": "docker run -it --mount type=bind,source=%cd%,target=/app -w /app node bash",
+      "devBuild:darwin:linux": "docker run -it --mount type=bind,source=\"$(pwd)\",target=/app -w /app node npm install",
+      "devInstall:darwin:linux": "docker run -it --mount type=bind,source=\"$(pwd)\",target=/app -w /app node bash"
+   },
+   "devDependencies": {
+      "chai": "^4.3.7",
+      "eslint": "^9.26.0",
+      "eslint-config-prettier": "^10.1.8",
+      "eslint-plugin-prettier": "^5.4.0",
+      "mocha": "^10.4.0",
+      "nodemon": "^3.1.11",
+      "npm-run-all": "^4.1.5",
+      "prettier": "^3.0.0",
+      "run-script-os": "^1.1.5",
+      "@eslint/js": "^9.15.0",
+      "globals": "^16.0.0"
+   },
+   "overrides": {
+      "@opentelemetry/api": "^1.7.0",
+      "glob": "^13.0.0",
+      "acorn-import-assertions": "npm:acorn-import-attributes@^1.9.5"
+   }
 }
